youfull/objects/MailPlan_Order_Oppty__c.object
<CustomObject>
    <fields>
        <fullName>CDW_DEDUCTED_RETURNS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Zone has closed and the Gomac(Leadership) process has been recieved by CDW</description>
        <label>CDW Deducted Returns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPGN_FLIP_DT__c</fullName>
        <description>This is the date after which the campaign has to be flipped as long as CDW  has updated the information of the day.</description>
        <label>Campaign Flip Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR__c</fullName>
        <label>CMPGN_NR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURRNT_CMPGN_MAIL_RMN_DAY_CNT__c</fullName>
        <label># of Days to Close</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURRNT_CMPGN_ONLN_RMN_DAY_CNT__c</fullName>
        <label>CURRNT_CMPGN_ONLN_RMN_DAY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURRNT_NEXT_CMPGN_PRFX_CD__c</fullName>
        <label>CURRNT_NEXT_CMPGN_PRFX_CD</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPLN_CD__c</fullName>
        <label>MLPLN_CD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPLN_CLOSD_IND_TRN__c</fullName>
        <description>Please NOTE:  MLPLN CLOSD IND has a Y when the mailplan is closed and a N when its open.  Based on that the formula would appear reversed on its label that is being returned.</description>
        <formula>CASE(MLPLN_CLOSD_IND__c, 
 &apos;N&apos;, $Label.MailPlan_Open_Indicator_Translation_True,
 &apos;Y&apos;, $Label.MailPlan_Open_Indicator_Translation_False,
 MLPLN_CLOSD_IND__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Translated values of the MailPlan Open Indicator</inlineHelpText>
        <label>MLPLN CLOSD IND TRN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPLN_CLOSD_IND__c</fullName>
        <label>MLPLN_CLOSD_IND</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPLN_END_DT__c</fullName>
        <label>MLPLN_END_DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MLPLN_STRT_DT__c</fullName>
        <label>MLPLN_STRT_DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MRKT_ID_ZONE_CD_CMPGN_NR_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_ID_ZONE_CD_CMPGN_NR_KEY</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>MRKT_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>MailPlan_Order_Opptys</relationshipLabel>
        <relationshipName>MailPlan_Order_Opptys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NEXT_MLPLN_TO_CLOS_CD__c</fullName>
        <label>NEXT_MLPLN_TO_CLOS_CD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ZONE_CD__c</fullName>
        <label>SLS_ZONE_CD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MailPlan_Order_Oppty</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <columns>MLPLN_CD__c</columns>
        <columns>CURRNT_CMPGN_MAIL_RMN_DAY_CNT__c</columns>
        <columns>CMPGN_NR__c</columns>
        <columns>CURRNT_NEXT_CMPGN_PRFX_CD__c</columns>
        <columns>CURRNT_CMPGN_ONLN_RMN_DAY_CNT__c</columns>
        <columns>MLPLN_CLOSD_IND__c</columns>
        <columns>NEXT_MLPLN_TO_CLOS_CD__c</columns>
        <columns>MLPLN_END_DT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPGN_NR__c</field>
            <operation>equals</operation>
            <value>201401</value>
        </filters>
        <filters>
            <field>MLPLN_CD__c</field>
            <operation>equals</operation>
            <value>O</value>
        </filters>
        <filters>
            <field>MLPLN_CD__c</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>73</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UK</fullName>
        <columns>NAME</columns>
        <columns>CMPGN_NR__c</columns>
        <columns>CURRNT_NEXT_CMPGN_PRFX_CD__c</columns>
        <columns>MLPLN_CD__c</columns>
        <columns>MLPLN_CLOSD_IND__c</columns>
        <columns>NEXT_MLPLN_TO_CLOS_CD__c</columns>
        <columns>SLS_ZONE_CD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLS_ZONE_CD__c</field>
            <operation>equals</operation>
            <value>284</value>
        </filters>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>73</value>
        </filters>
        <filters>
            <field>CMPGN_NR__c</field>
            <operation>equals</operation>
            <value>18</value>
        </filters>
        <label>UK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Zone_205</fullName>
        <columns>NAME</columns>
        <columns>MLPLN_STRT_DT__c</columns>
        <columns>MLPLN_END_DT__c</columns>
        <columns>CMPGN_NR__c</columns>
        <columns>SLS_ZONE_CD__c</columns>
        <columns>MRKT_ID__c</columns>
        <columns>MLPLN_CLOSD_IND__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLS_ZONE_CD__c</field>
            <operation>equals</operation>
            <value>0208</value>
        </filters>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>55</value>
        </filters>
        <filters>
            <field>MLPLN_CLOSD_IND__c</field>
            <operation>equals</operation>
            <value>N</value>
        </filters>
        <label>Zone 205</label>
        <language>en_US</language>
        <sharedTo>
            <group>System Admin Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MPLN-{000000}</displayFormat>
        <label>Mail Plan Order Oppty Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MailPlan_Order_Opptys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>